--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,8 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
@@ -23,158 +20,149 @@
             android:background="@drawable/wood_background"
             >
 
-            <RelativeLayout
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="175dp"
-                    android:id="@+id/cover"
-                    android:src="@drawable/title_wood"
-                    android:layout_marginTop="20dp"
-
-                    />
-
-                <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_alignParentTop="true"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/restaurant_name"
-                    android:text=""
-                    android:layout_alignParentTop="true"
-                    android:textColor="@android:color/white"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:layout_marginTop="20dp"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center" />
-            </RelativeLayout>
-
-            <android.support.v7.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"
-                card_view:cardCornerRadius="5dp"
-                card_view:cardBackgroundColor="@color/lightGrey"
-                >
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="5dp"
-                        android:layout_gravity="center">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="175dp"
+                        android:id="@+id/cover"
+                        android:src="@drawable/title_wood"
+                        android:layout_marginTop="20dp"
 
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:src="@drawable/ic_ricerca_luogo"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
-                            android:background="@color/transparent"
-                            android:onClick="ricercaLuogo"
-                            android:id="@+id/ricerca_luogo"/>
-
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_ricerca_luogo"
-                            android:background="@color/transparent"
-                            android:layout_marginRight="10dp"
-                            android:onClick="ricercaRistorante"
-                            android:id="@+id/ricerca_ristorante"/>
-
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_ricerca_luogo"
-                            android:background="@color/transparent"
-                            android:onClick="ricercaPiatto"
-                            android:id="@+id/ricerca_piatto"/>
-
-                    </LinearLayout>
+                        />
 
                     <android.support.v7.widget.CardView
                         xmlns:android="http://schemas.android.com/apk/res/android"
                         xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginBottom="10dp"
                         card_view:cardCornerRadius="5dp"
-                        card_view:cardBackgroundColor="@color/white"
+                        card_view:cardBackgroundColor="@color/lightGrey"
                         >
 
-                        <SearchView
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/searchView_main"
-                            android:layout_gravity="center_horizontal"
-                            />
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_marginTop="5dp"
+                                android:layout_gravity="center">
+
+                                <ImageButton
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/ic_ricerca_ristorante_selezione"
+                                    android:background="@color/transparent"
+                                    android:layout_marginRight="10dp"
+                                    android:onClick="ricercaRistorante"
+                                    android:id="@+id/ricerca_ristorante"/>
+
+                                <ImageButton
+                                    android:layout_width="wrap_content"
+                                    android:src="@drawable/ic_ricerca_luogo"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginRight="10dp"
+                                    android:background="@color/transparent"
+                                    android:onClick="ricercaLuogo"
+                                    android:id="@+id/ricerca_luogo"/>
+
+                            </LinearLayout>
+
+                            <android.support.v7.widget.CardView
+                                xmlns:android="http://schemas.android.com/apk/res/android"
+                                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginRight="10dp"
+                                android:layout_marginBottom="10dp"
+                                card_view:cardCornerRadius="5dp"
+                                card_view:cardBackgroundColor="@color/white"
+                                >
+
+                                <SearchView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/searchView_main"
+                                    android:layout_gravity="center_horizontal"
+                                    />
+                            </android.support.v7.widget.CardView>
+                            <!--
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="@string/info_ricerca"
+                                android:gravity="center"
+                                android:textSize="12dp"
+                                android:layout_marginBottom="10dp"/>
+                            -->
+
+                        </LinearLayout>
+
                     </android.support.v7.widget.CardView>
 
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/titolo_offerte_vicine"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="10sp"
+                        android:layout_marginBottom="10sp"
+                        style="@style/niceText" />
+
+                    <!--
+                        qui ci possiamo mettere una lista con card medio/grandi
+                        che possiamo cliccare e andare subito alla pagina
+                        del ristorante desiderato
+                     -->
+
+                    <android.support.v7.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:id="@+id/recyclerView_nearOffers"/>
+
+                    <Button
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/addReview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/info_ricerca"
-                        android:gravity="center"
-                        android:textSize="12dp"
-                        android:layout_marginBottom="10dp"/>
+                        android:text="Add Review" />
 
                 </LinearLayout>
+            </ScrollView>
 
-            </android.support.v7.widget.CardView>
-
-            <TextView
-                android:layout_width="wrap_content"
+            <include layout="@layout/toolbar_view"
                 android:layout_height="wrap_content"
-                android:text="@string/titolo_offerte_vicine"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10sp"
-                android:layout_marginBottom="10sp"
-                style="@style/niceText" />
-
-            <!--
-                qui ci possiamo mettere una lista con card medio/grandi
-                che possiamo cliccare e andare subito alla pagina
-                del ristorante desiderato
-             -->
-
-            <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:id="@+id/recyclerView_nearOffers"/>
+                android:layout_alignParentTop="true"
+                />
 
-            <Button
-                android:layout_marginTop="70dp"
-                android:id="@+id/addReview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Add Review" />
+        </RelativeLayout>
 
-        </LinearLayout>
-    </ScrollView>
 
-    <!-- -->
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header" />
+        <!-- -->
+        <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/nav_header" />
 
 
 
