--- a/app/src/main/res/layout/fragment_ricerca_avanzata.xml
+++ b/app/src/main/res/layout/fragment_ricerca_avanzata.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/card_risultati_verticale"
-    card_view:cardBackgroundColor="@color/lightGrey"
+    card_view:cardBackgroundColor="@color/blackSemiTrasparent"
     card_view:cardCornerRadius="5dp"
     android:clickable="true"
     >
@@ -19,6 +19,45 @@
        <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+           <TableRow>
+               <TextView
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:textSize="14sp"
+                   android:textColor="@color/titoli"
+                   android:fontFamily="sans-serif"
+                   android:text="Nome piatto:"
+                   android:layout_weight="1"
+                   android:gravity="center_horizontal"
+                   android:layout_marginTop="10dp" />
+           </TableRow>
+
+           <TableRow>
+               <android.support.v7.widget.CardView
+                   xmlns:android="http://schemas.android.com/apk/res/android"
+                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginTop="5dp"
+                   android:layout_marginLeft="10dp"
+                   android:layout_marginRight="10dp"
+                   android:layout_marginBottom="10dp"
+                   card_view:cardCornerRadius="5dp"
+                   card_view:cardBackgroundColor="@color/white"
+                   android:layout_weight="1"
+                   >
+
+               <EditText
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_weight="1"
+                   android:layout_marginLeft="5dp"
+                   android:layout_marginRight="5dp"
+                   android:id="@+id/piatto_finder"
+                   android:gravity="center_horizontal"
+                   />
+               </android.support.v7.widget.CardView>
+           </TableRow>
 
             <TableRow>
                     <TextView
@@ -58,7 +97,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/spinner_tipo_finder"
                     android:entries="@array/tipoLocaleArray"
-                    android:popupBackground="@color/lightGrey"
+                    android:popupBackground="@color/white"
                     android:layout_weight="1"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp">
@@ -69,7 +108,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/spinner_costo_finder"
                     android:entries="@array/costoArray"
-                    android:popupBackground="@color/lightGrey"
+                    android:popupBackground="@color/white"
                     android:layout_weight="1"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp">
@@ -80,7 +119,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/spinner_valutazione_finder"
                     android:entries="@array/valutazioneArray"
-                    android:popupBackground="@color/lightGrey"
+                    android:popupBackground="@color/white"
                     android:layout_weight="1"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp">
