--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,7 +4,7 @@
         <item>-</item>
         <item>@string/takeAway</item>
         <item>@string/restaurant</item>
-        <item>All</item>
+        <item>T.A.&amp;Restaurant</item>
     </string-array>
 
     <string-array name="costoArray">
@@ -16,9 +16,9 @@
 
     <string-array name="valutazioneArray">
         <item>-</item>
-        <item>*</item>
-        <item>**</item>
-        <item>***</item>
+        <item>★</item>
+        <item>★★</item>
+        <item>★★★</item>
     </string-array>
 
 </resources>
