--- a/app/src/main/res/layout/reservations_history_item.xml
+++ b/app/src/main/res/layout/reservations_history_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_margin="@dimen/activity_horizontal_margin"
+    android:padding="@dimen/activity_horizontal_margin"
     android:layout_height="match_parent">
 
     <TextView
@@ -85,8 +85,8 @@
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="Review"
-            android:id="@+id/review" />
+            android:text="Cancel"
+            android:id="@+id/cancel" />
     </LinearLayout>
 
 </LinearLayout>
