--- a/app/src/main/res/layout/activity_reservations_history.xml
+++ b/app/src/main/res/layout/activity_reservations_history.xml
@@ -8,16 +8,16 @@
 
     <include android:id="@+id/tb" layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_alignParentTop="true"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ListView
+        <!--<ListView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/listView">
 
-        </ListView>
+        </ListView>-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-    </ScrollView>
 </LinearLayout>
