--- a/app/src/main/res/layout/reservations_history_item.xml
+++ b/app/src/main/res/layout/reservations_history_item.xml
@@ -86,7 +86,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="Cancel"
-            android:id="@+id/cancel" />
+            android:id="@+id/cancelBtn" />
     </LinearLayout>
 
 </LinearLayout>
