--- a/app/src/main/res/layout-v21/review_dishes_item.xml
+++ b/app/src/main/res/layout-v21/review_dishes_item.xml
@@ -12,12 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/dish_name"
-        android:textColor="@color/blackSemitrasparent"
         android:textStyle="italic"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="18sp"
         android:text="Nome piatto"/>
+
+    <!-- <ViewSwitcher
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/viewSwitcher" > -->
 
         <Button
             android:layout_width="wrap_content"
@@ -25,10 +29,9 @@
             android:layout_gravity="center"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:background="@color/colorAccent"
+            style="@style/Base.Widget.AppCompat.Button.Colored"
             android:text="@string/rate_it"
-            android:id="@+id/rateIt"
-            android:layout_margin="5dp" />
+            android:id="@+id/rateIt"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,5 +61,6 @@
                 android:background="@android:drawable/ic_menu_close_clear_cancel"/>
 
         </LinearLayout>
+   <!-- </ViewSwitcher>-->
 
 </LinearLayout>
