--- a/app/src/main/res/layout/food_order_item.xml
+++ b/app/src/main/res/layout/food_order_item.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/dish_name"
         android:textStyle="italic"
+        android:textColor="@color/blackSemitrasparent"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textSize="18sp"
         android:text="Nome piatto"/>
@@ -36,6 +37,8 @@
         android:id="@+id/dish_price"
         android:layout_marginRight="20dp"
         android:layout_toLeftOf="@+id/quantity"
+
+        android:textColor="@color/blackSemitrasparent"
         android:textStyle="bold"
         android:textSize="18sp"
         android:layout_gravity="center_vertical"
@@ -65,6 +68,7 @@
             android:layout_height="24dp"
             android:gravity="center"
             android:text="0"
+            android:textColor="@color/blackSemitrasparent"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_gravity="center" />
 
