--- a/app/src/main/res/layout/restaurant_userphoto_fragment.xml
+++ b/app/src/main/res/layout/restaurant_userphoto_fragment.xml
@@ -73,7 +73,7 @@
                 />
         </LinearLayout>
     </HorizontalScrollView>
-    <Button
+    <!--!<Button
         android:id="@+id/addPhotoButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -86,5 +86,5 @@
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
-        android:text="SHOW GALLERY" />
+        android:text="SHOW GALLERY" /> -->
 </LinearLayout>
