--- a/app/src/main/res/layout/reservation_details_dialog.xml
+++ b/app/src/main/res/layout/reservation_details_dialog.xml
@@ -47,6 +47,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/your_order_details"
             android:layout_marginBottom="8dp"
