--- a/app/src/main/res/layout/activity_reservation_request.xml
+++ b/app/src/main/res/layout/activity_reservation_request.xml
@@ -45,7 +45,7 @@
     </FrameLayout>
 
 <android.support.v4.widget.NestedScrollView
-
+    android:id="@+id/reservationsNestedScrollView"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
