--- a/app/src/main/res/layout/reservations_history_item.xml
+++ b/app/src/main/res/layout/reservations_history_item.xml
@@ -4,15 +4,17 @@
     android:layout_width="match_parent"
     android:layout_margin="@dimen/activity_horizontal_margin"
     android:layout_height="match_parent">
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:src="@android:drawable/ic_dialog_info"
-        android:layout_height="wrap_content"
-        android:id="@+id/info2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"/>
-
+<android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        card_view:cardCornerRadius="4dp"
+        android:minHeight="64dp"
+        card_view:cardUseCompatPadding="true"
+        android:layout_width="match_parent"
+        android:clickable="true"
+        android:layout_height="wrap_content">
 <LinearLayout
+    android:padding="16dp"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content">
@@ -66,39 +68,45 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:weightSum="3"
-
+        android:gravity="center_horizontal"
+        android:layout_marginTop="16dp"
         android:layout_height="wrap_content">
 
         <Button
+            android:padding="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/roundend_background"
+            android:textColor="@color/white"
+            android:background="@drawable/mybutton"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:text="Info"
             android:id="@+id/info" />
 
         <Button
+            android:padding="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="16dp"
             android:text="Restaurant"
-            android:background="@drawable/roundend_background"
+            android:visibility="gone"
+            android:textColor="@color/white"
+            android:background="@drawable/mybutton"
             style="@style/Widget.AppCompat.Button.Colored"
             android:id="@+id/restaurant" />
 
         <Button
-
-            android:background="@drawable/roundend_background"
+            android:padding="4dp"
+            android:background="@drawable/mybutton"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/remove"
+            android:textColor="@color/white"
             android:id="@+id/cancelBtn" />
     </LinearLayout>
 
 </LinearLayout>
-
+</android.support.v7.widget.CardView>
 </RelativeLayout>
