--- a/app/src/main/res-manager/layout/activity_edit_restaurant_profile.xml
+++ b/app/src/main/res-manager/layout/activity_edit_restaurant_profile.xml
@@ -22,15 +22,26 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
 
-            <TextView
+            <!--<TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/logo"
                 android:id="@+id/textView"
                 android:paddingTop="10dp"
-                android:paddingBottom="10dp" />
-
+                android:paddingBottom="10dp" />-->
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                card_view:cardCornerRadius="4dp"
+                android:minHeight="64dp"
+                card_view:cardUseCompatPadding="true"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:clickable="true"
+                android:layout_height="wrap_content"><LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
             <fragment
                 xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab4"
                 android:id="@+id/logo_fragment"
@@ -44,15 +55,19 @@
                 custom:widthInDP="100"
                 custom:initialBackground="@drawable/default_dish_icon"
                 />
-            <TextView
+            </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                card_view:cardCornerRadius="4dp"
+                android:minHeight="64dp"
+                card_view:cardUseCompatPadding="true"
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/covers"
-                android:id="@+id/cover"
-                android:paddingTop="20dp"
-                android:paddingBottom="10dp"
-                />
+                android:clickable="true"
+                android:layout_height="wrap_content">
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -120,86 +135,170 @@
                     />
 
             </RelativeLayout>
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/restaurant_name"
-                android:id="@+id/restaurant_name"
-
-                android:paddingTop="10dp" />
-
-            <EditText
+            </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            card_view:cardCornerRadius="4dp"
+            android:minHeight="64dp"
+            card_view:cardUseCompatPadding="true"
+            android:layout_width="match_parent"
+            android:clickable="true"
+            android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edit_name"
-                android:textColor="@android:color/black"/>
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:id="@+id/usernameLL">
 
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:id="@+id/imageView2"
+                    android:src="@drawable/ic_user_grey"
+                    android:alpha="0.7" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/address"
-                android:id="@+id/address"
-                android:paddingTop="20dp"
-                />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edit_name"
+                    android:textColor="@android:color/black"
+                    android:background="@android:color/transparent"
+                    android:padding="5dp"
+                    android:text="Alma Latina"
+                    android:singleLine="false" />
 
-            <EditText
+            </LinearLayout>
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:background="#20000000"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edit_address"
-                android:inputType="textPostalAddress"
-                android:textColor="@android:color/black"/>
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:id="@+id/addressLL">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/phone_number"
-                android:id="@+id/phone"
-                android:paddingTop="20dp"
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/ic_address_grey" />
 
-                />
-            <EditText
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edit_address"
+                    android:textColor="@android:color/black"
+                    android:background="@android:color/transparent"
+                    android:padding="5dp"
+                    android:text="Via Germanasca 32"
+
+                    android:singleLine="false" />
+
+            </LinearLayout>
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:background="#20000000"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp" />
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edit_phone"
-                android:inputType="phone"
-                android:textColor="@android:color/black"/>
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:id="@+id/phoneLL"
+                android:longClickable="true">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/email"
-                android:id="@+id/email"
-                android:paddingTop="20dp"
-                android:layout_below="@id/edit_phone"
-                />
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edit_email"
-                android:inputType="textEmailAddress"
-                android:textColor="@android:color/black"/>
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/ic_phone_grey" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/description"
-                android:id="@+id/description"
-                android:paddingTop="20dp"
-                />
-            <EditText
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edit_phone"
+                    android:textColor="@android:color/black"
+                    android:background="@android:color/transparent"
+                    android:hint="eg: 333921382"
+                    android:padding="5dp"
+                    android:inputType="phone" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:background="#20000000"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edit_description"
-                android:inputType="textMultiLine"
-                android:textColor="@android:color/black"/>
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:id="@+id/emailLL"
+                android:longClickable="true">
+
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/ic_email_profile_grey"
+                    android:cropToPadding="false"
+                    android:padding="2dp" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edit_email"
+                    android:textColor="@android:color/black"
+                    android:background="@android:color/transparent"
+                    android:hint="email@example.com"
+                    android:padding="5dp"
+                    android:inputType="textEmailAddress" />
+            </LinearLayout>
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:background="#20000000"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/bioLL"
+                android:longClickable="true">
+
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/ic_bio_lines_grey"
+                    android:cropToPadding="false"
+                    android:padding="2dp" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:id="@+id/edit_description"
+                    android:textColor="@android:color/black"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/description"
+                    android:padding="5dp"
+                    android:inputType="textMultiLine" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -320,7 +419,8 @@
 
 
         </LinearLayout>
-
+    </android.support.v7.widget.CardView>
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
