creazione activity per le notifiche aggiunta fab preferiti nel ristorante ORA base activity ha un unico menu (action_bar) con tutte le icone al momento previste che sono di default non visibili ad eccezione dell'alert nelle activity bisogna quindi settare la visibilità del bottone di cui si ha bisogno e chiamare invalidateMenuOptions (esempio in elaborazionericerche per  il filtro ) e fare l'override del metodo onOptionselected

--- a/app/src/main/res/layout/activity_edit_user_profile.xml
+++ b/app/src/main/res/layout/activity_edit_user_profile.xml
@@ -69,7 +69,7 @@
                 android:weightSum="3"
                 android:paddingTop="10dp"
                 android:gravity="center"
-                >
+                android:layout_gravity="center_horizontal">
 
                 <RadioButton
                     android:layout_width="wrap_content"
