--- a/app/src/main/res-manager/layout/activity_main_manager.xml
+++ b/app/src/main/res-manager/layout/activity_main_manager.xml
@@ -28,6 +28,12 @@
                 android:text="Work in progress.."
                 android:textSize="20sp"
                 android:layout_centerHorizontal="true"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Button"
+                android:id="@+id/button" />
             <!--<ImageView
                 android:layout_width="200dp"
                 android:layout_height="200dp"
@@ -90,7 +96,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="it.polito.mad_lab2.MainActivity">
+        tools:context="it.polito.mad_lab2.MainActivityManager">
 
         <Button
             android:layout_width="wrap_content"
