--- a/app/src/main/res/layout/activity_show_additional_info.xml
+++ b/app/src/main/res/layout/activity_show_additional_info.xml
@@ -83,6 +83,13 @@
                             android:id="@+id/address" />
                     </LinearLayout>
 
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="1dip"
+                        android:background="#20000000"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -106,7 +113,15 @@
                             android:textAppearance="?android:attr/textAppearanceMedium"
                             android:text="0953533353"
                             android:id="@+id/phoneNumber" />
+
                     </LinearLayout>
+
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="1dip"
+                        android:background="#20000000"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
