--- a/app/src/main/res/menu/activity_drawer_login.xml
+++ b/app/src/main/res/menu/activity_drawer_login.xml
@@ -9,6 +9,9 @@
             android:id="@+id/prenotazioni_user"
             android:title="@string/prenotazioni" />
         <item
+            android:id="@+id/favourites_user"
+            android:title="@string/prenotazioni" />
+        <item
             android:id="@+id/logout_user"
             android:title="@string/logout" />
     </group>
