--- a/app/src/main/res-manager/layout/activity_edit_restaurant_profile.xml
+++ b/app/src/main/res-manager/layout/activity_edit_restaurant_profile.xml
@@ -22,21 +22,11 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:gravity="center"
             android:orientation="vertical">
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                card_view:cardCornerRadius="4dp"
-
-                android:gravity="center"
-                android:minHeight="64dp"
-                card_view:cardUseCompatPadding="true"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:padding="@dimen/activity_horizontal_margin"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:background="@android:drawable/dialog_holo_light_frame">
                     <fragment
                         xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab4"
                         android:id="@+id/logo_fragment"
@@ -49,8 +39,7 @@
                         custom:widthInDP="200"
                         custom:initialBackground="@drawable/ic_account_circle_white_48dp"
                         />
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </RelativeLayout>
 
             <!--<TextView
                 android:layout_width="wrap_content"
