--- a/app/src/main/res-manager/layout/activity_gestione_offerte.xml
+++ b/app/src/main/res-manager/layout/activity_gestione_offerte.xml
@@ -15,10 +15,36 @@
         >
 
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView_offerte"/>
+        <it.polito.mad_lab4.common.EmptyRecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recyclerView_offerte"/>
+
+        <LinearLayout
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/imageView4"
+                android:src="@drawable/add_list"
+                android:alpha="0.4"
+                android:adjustViewBounds="false" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_offer"
+                android:textAppearance="@android:style/TextAppearance.Small"
+                android:gravity="center_horizontal"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp" />
+
+        </LinearLayout>
 
 
         <include  layout="@layout/fat_buttons"  />
