--- a/app/src/main/res-manager/layout/activity_modify_menu_dish.xml
+++ b/app/src/main/res-manager/layout/activity_modify_menu_dish.xml
@@ -23,22 +23,11 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                card_view:cardCornerRadius="4dp"
-
-                android:gravity="center"
-                android:minHeight="64dp"
-                card_view:cardUseCompatPadding="true"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:clickable="true"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:padding="@dimen/activity_horizontal_margin"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:background="@android:drawable/dialog_holo_light_frame">
                     <fragment
                         xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab4"
                         android:id="@+id/imageDish_modifyMenu"
@@ -51,8 +40,7 @@
                         custom:widthInDP="200"
                         custom:initialBackground="@drawable/default_dish_icon"
                         />
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+                </RelativeLayout>
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 xmlns:android="http://schemas.android.com/apk/res/android"
@@ -60,7 +48,6 @@
                 android:minHeight="64dp"
                 card_view:cardUseCompatPadding="true"
                 android:layout_width="match_parent"
-                android:clickable="true"
                 android:layout_height="wrap_content">
                 <LinearLayout
                     android:layout_width="match_parent"
