--- a/app/src/main/res/layout/activity_edit_user_profile.xml
+++ b/app/src/main/res/layout/activity_edit_user_profile.xml
@@ -22,16 +22,11 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                card_view:cardCornerRadius="4dp"
-                android:minHeight="64dp"
-                card_view:cardUseCompatPadding="true"
-                android:layout_gravity="center"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:clickable="true"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:background="@android:drawable/dialog_holo_light_frame">
             <fragment
                 xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab4"
                 android:id="@+id/logo_fragment"
@@ -45,7 +40,7 @@
                 custom:widthInDP="200"
                 custom:initialBackground="@drawable/ic_account_box_white_48dp"
                 />
-            </android.support.v7.widget.CardView>
+            </RelativeLayout>
 
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
