--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,51 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_height="match_parent"
+<RelativeLayout
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android" >
-    <include android:id="@+id/toolbar_layout" layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"/>
 
-    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    <include android:id="@+id/toolbar_layout"
+        layout="@layout/toolbar_view"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"/>
+
+    <!--
+        Schermata di Login classica
+    -->
+
+     <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="5dp"
+        card_view:cardCornerRadius="5dp"
         android:layout_below="@id/toolbar_layout"
-    tools:context="it.polito.mad_lab4.login.Login">
+        >
+
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:context="it.polito.mad_lab4.login.Login">
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="10dp"
+            card_view:cardCornerRadius="5dp"
+            card_view:cardBackgroundColor="@color/lightGrey"
+            >
             <TextView
                 android:layout_width="wrap_content"
+                android:id="@+id/login_failed_message"
                 android:layout_height="wrap_content"
-                android:text="Username:"/>
-            <EditText
-                android:id="@+id/usernameET"
-                android:layout_marginLeft="8dp"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-        <LinearLayout
+                android:textColor="@color/bad"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/login_failed"
+                android:visibility="gone"/>
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10sp">
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/username_login"/>
+                    <EditText
+                        android:id="@+id/usernameET"
+                        android:layout_marginLeft="8dp"
+                        android:layout_width="200dp"
+                        android:inputType="textEmailAddress"
+                        android:layout_height="wrap_content" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/password"/>
+                    <EditText
+                        android:id="@+id/passwordET"
+                        android:layout_marginLeft="8dp"
+                        android:inputType="textPassword"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content" />
+                </TableRow>
+            </TableLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Password:"/>
-            <EditText
-                android:id="@+id/passwordET"
-                android:layout_marginLeft="8dp"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+            android:text="@string/newAccount"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/bad"
+            android:onClick="nuovaRegistrazione"
+            android:layout_gravity="center_horizontal"/>
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,14 +105,281 @@
             android:layout_marginTop="16dp"
             android:layout_gravity="center_horizontal"
             android:onClick="eseguiLogin"
+            style="?android:attr/borderlessButtonStyle"
+            android:background="@drawable/mybutton"
+            android:textColor="@color/white"
             />
-
-        <TextView
-            android:layout_marginTop="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Log in with one of the following:\nUsername: fgermano; Password: pass\nUsername: ggaleano; Password: pass1"/>
-
-
     </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <!--
+        Creazione di un nuovo account utente
+    -->
+
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_newAccountUtente"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="5dp"
+        card_view:cardCornerRadius="5dp"
+        android:layout_below="@id/toolbar_layout"
+        android:visibility="gone"
+        >
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:context="it.polito.mad_lab4.login.Login">
+
+
+            <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
+                card_view:cardCornerRadius="5dp"
+                card_view:cardBackgroundColor="@color/lightGrey"
+                >
+                    <TableLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginBottom="10sp">
+                        <TableRow>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/nome_registrazione"/>
+                            <EditText
+                                android:id="@+id/nameNA_client"
+                                android:layout_marginLeft="8dp"
+                                android:layout_width="200dp"
+                                android:layout_height="wrap_content" />
+                        </TableRow>
+                        <TableRow>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/email_registrazione"/>
+                            <EditText
+                                android:id="@+id/emailNA_client"
+                                android:layout_marginLeft="8dp"
+                                android:layout_width="200dp"
+                                android:inputType="textEmailAddress"
+                                android:layout_height="wrap_content" />
+                        </TableRow>
+                        <TableRow>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/password"/>
+                            <EditText
+                                android:id="@+id/passwordNA_client"
+                                android:layout_marginLeft="8dp"
+                                android:inputType="textPassword"
+                                android:layout_width="200dp"
+                                android:layout_height="wrap_content" />
+                        </TableRow>
+                        <TableRow>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/password_ripeat"/>
+                            <EditText
+                                android:id="@+id/passwordNA_client_repeat"
+                                android:layout_marginLeft="8dp"
+                                android:inputType="textPassword"
+                                android:layout_width="200dp"
+                                android:layout_height="wrap_content" />
+                        </TableRow>
+                        <TableRow>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/università_registrazione"/>
+                            <EditText
+                                android:id="@+id/univerityNA_client"
+                                android:layout_marginLeft="8dp"
+                                android:layout_width="200dp"
+                                android:layout_height="wrap_content" />
+                        </TableRow>
+
+                    </TableLayout>
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ritorna_al_login"
+                android:id="@+id/loginReturn_client"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/bad"
+                android:onClick="tornaAlLogin"
+                android:layout_gravity="center_horizontal"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/createAccount"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center_horizontal"
+                android:onClick="eseguiNuovaRegistrazioneUtente"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/mybutton"
+                android:textColor="@color/white"
+                />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <!--
+        Creazione di un nuovo account ristoratore
+    -->
+
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_newAccountManager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="5dp"
+        card_view:cardCornerRadius="5dp"
+        android:layout_below="@id/toolbar_layout"
+        android:visibility="gone"
+        >
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:context="it.polito.mad_lab4.login.Login">
+
+
+            <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
+                card_view:cardCornerRadius="5dp"
+                card_view:cardBackgroundColor="@color/lightGrey"
+                >
+                <TableLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginBottom="10sp">
+                    <TableRow>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/nome_registrazione"/>
+                        <EditText
+                            android:id="@+id/nameNA_manager"
+                            android:layout_marginLeft="8dp"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content" />
+                    </TableRow>
+                    <TableRow>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/email_registrazione"/>
+                        <EditText
+                            android:id="@+id/emailNA_manager"
+                            android:layout_marginLeft="8dp"
+                            android:layout_width="200dp"
+                            android:inputType="textEmailAddress"
+                            android:layout_height="wrap_content" />
+                    </TableRow>
+                    <TableRow>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/password"/>
+                        <EditText
+                            android:id="@+id/passwordNA_manager"
+                            android:layout_marginLeft="8dp"
+                            android:inputType="textPassword"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content" />
+                    </TableRow>
+                    <TableRow>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/password_ripeat"/>
+                        <EditText
+                            android:id="@+id/passwordNA_manager_repeat"
+                            android:layout_marginLeft="8dp"
+                            android:inputType="textPassword"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content" />
+                    </TableRow>
+                    <TableRow>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/service_type_manager_registrazione"/>
+                        <Spinner
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/spinner_tipo_registrazione"
+                            android:entries="@array/tipoLocaleRegistrazione"
+                            android:popupBackground="@color/white"
+                            android:layout_weight="1">
+                        </Spinner>
+                    </TableRow>
+
+                </TableLayout>
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ritorna_al_login"
+                android:id="@+id/loginReturn_manager"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/bad"
+                android:onClick="tornaAlLogin"
+                android:layout_gravity="center_horizontal"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/createAccount"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center_horizontal"
+                android:onClick="eseguiNuovaRegistrazioneRistoratore"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/mybutton"
+                android:textColor="@color/white"
+                />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+    <TextView
+        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/card_login"
+        android:text="(Username rappresenta la propria mail di registrazione)\nLog in with one of the following:\nUsername: fgermano; Password: pass\nUsername: ggaleano; Password: pass1"/>
+
+
+
 </RelativeLayout>
