--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -46,4 +46,11 @@
         <item>★★★</item>
     </string-array>
 
+    <string-array name="tipoLocaleRegistrazione">
+        <item>@string/noServices</item>
+        <item>@string/takeAway</item>
+        <item>@string/restaurant</item>
+        <item>@string/takeAway_Restaurant</item>
+    </string-array>
+
 </resources>
